# learning-rust-by-doing

room-chat-app/: Cargo.toml
room-chat-app/src/: main.rs
room-chat-app/src/client/: handler.rs  mod.rs  ui.rs
room-chat-app/src/common/: message.rs  mod.rs  room.rs
room-chat-app/src/server/: client_manager.rs  handler.rs  mod.rs  room_manager.rs
simple-chat-app/: Cargo.toml  README.md
simple-chat-app/src/: client.rs  server.rs
